--- a/assets/locales/dialogs/hillburrow/potiok-boss.en.json
+++ b/assets/locales/dialogs/hillburrow/potiok-boss.en.json
@@ -37,11 +37,14 @@
             "sabotage-start-accusations": "I know who's responsible for the explosions in the mine.",
             "sabotage-water-carrier-convince": "Come on... you've met Mighty Hobo before, right ? He clearly has some screws lose, it shouldn't come as a surprise that somepony like him would play with explosives.",
             "sabotage-water-carrier-fought-back": "He tried to kill me when I pressed him for answers... I had to put him down.",
+            "sabotage-water-carrier-tipped-off": "He knows we're onto him. I had to force a confession out of him. He probably skipped town already.",
             "sabotage-water-carrier-whereabouts": "He doesn't suspect anything. He's either carrying water, or sitting in his shed.",
             "sabotage/about-payment": "But of course. A hundred caps should cover your expenses well enough, I assume ?",
+            "sabotage/accusation/water-carrier/404ed": "Well. My ponies couldn't find him. He's not in his shed, he's not in town either. It's too bad... maybe we could've gotten something useful out of him.<br><br>We'll keep an eye out.<br/>Good job. Your help isn't going unappreciated.",
             "sabotage/accusation/water-carrier/abou-confession": "Did he ? It still doesn't explain why he did it though.",
             "sabotage/accusation/water-carrier/about-bibin": "Bibin ? That filthy gangster from the slums ? That is... unexpected. Everypony knows he has beef against us Potioks, but this is rather extreme, even for him. This matter no longer only concerns me. The family must hear about this as soon as possible. I need you to go to the Potiok ranch at Cristal Den. Speak to the matriarch. They'll let you meet her if you tell them I sent you.",
             "sabotage/accusation/water-carrier/entry": "The water carrier ? That's a bit surprising. I really don't see what he has to gain from this. And in this day and age, it's not so weird to own dyanmite.",
+            "sabotage/accusation/water-carrier/tipped-off": "Really ? And it didn't really come to mind that you should have brought him to me ?",
             "sabotage/accusation/water-carrier/water-carrier-dead": "Damn... well, it's unlikely we would've gotten anything out of him anyway. He wasn't exactly very smart to begin with.<br>Good job. Your help isn't going unappreciated.",
             "sabotage/accusation/water-carrier/whereabouts": "So, where is this water carrier, now ? I'll have my ponies fetch him so that I can interrogate him.",
             "sabotage/accusations": "Wonderful ! Who was it then ? And how did you find out ?",
