--- a/assets/locales/dialogs/hillburrow/sheriff.en.json
+++ b/assets/locales/dialogs/hillburrow/sheriff.en.json
@@ -13,11 +13,47 @@
             "back-to-entry": "Let's talk about something else.",
             "entry": "Hey. Need help with something ?",
             "exit-entry": "Nothing, bye.",
+            "hobo-after-fight-ask-join": "Well... I'm on my way back on the road as well. ",
+            "hobo-after-fight-ask-whats-next": "So, what are you going to do next ?",
+            "hobo-after-fight-exit": "Don't mention it. Take care of yourself.",
+            "hobo-after-fight-exit-alt": "Sounds like a plan. Take care of yourself.",
+            "hobo-after-fight-vendetta": "This isn't over yet. There are forces behind Mighty Hobo, who pushed him to murder for their own interests. I want to get to the bottom of it. And I think you should join me.",
             "introduce-player": "Nice to meet you. I'm {{name}}.",
             "name-already-known": "Yes. You're {{name}}. I know that. We've met before.",
             "no-more-work": "I've got nothing for you at the moment. It's a small town after all.",
+            "old-sherif-murder-not-solved": "Beats me. But the fact remains that I found this star on Mighty Hobo.",
+            "old-sherif-report-cancel": "I guess I need to investigate a little more still.",
+            "old-sherif-report-drunken-master": "Itchy Champ had an argument with Scratchy Lead the night of the murder. The autopsy revealed Scratchy was murdered by an earth pony in hoof to hoof combat. Not a lot of ponies around that fit the description as well as Itchy. He has to be the murderer.",
+            "old-sherif-report-mercenaries": "The mercenaries hired by the Potiok are the likeliest perpetrators. They suspected Scratchy Lead was purposefully slowing down the investigation on the coal mine sabotages. They're not really known to be law abiding citizen, and their leader Apathy Flake clearly showed no grief over Scratchy's death when I interrogated him.",
+            "old-sherif-report-water-carrier": "I found this sheriff star on the water carrier. That sounds pretty suspicious if you ask me.",
+            "old-sherif-solve-murder": "Mighty Hobo was responsible for the sabotage at the coal mine. My guess is that Scratchy Lead did solve the case... possibly caught him red-hoofed. He tried to put him behind bars, and Mighty resisted the arrest.",
+            "old-sheriff-already-dead-conclusion": "I'll leave you alone, now. Take care.",
+            "old-sheriff-already-dead-start-vendetta": "You're wrong. It's not over. Mighty Hobo was but a tool in the schemes of Bibin. Don't you want to see this through ? Will you help me put an end to this ?",
+            "old-sheriff-closure-against-murder": "Killing Mighty Hobo won't make you feel better, {{npc}}. He was merely a witless tool in the schemes of evil ponies.",
+            "old-sheriff-closure-full-vendetta": "Alright, I hear you. But there are greater things at play. Will you feel satisfied with taking vengeance by destroying the tool, and leave the real culprit unharmed ? Everything that's happened has been happening because of the Cristal Den. Bibin's band, Potioks, they brought this town to the ground and use it for their petty wars. Don't you want to put an end to it ?",
+            "old-sheriff-closure-give-up": "I understand. I have no right to tell you what's right or wrong. Do what you think needs to be done.",
+            "old-sheriff-closure-partner-up": "Mighty Hobo is dangerous. I know you think you need to do this yourself. But I'm in too deep already, and I want to make sure justice is served. Please, {{npc}}. Let me come with.",
+            "old-sheriff-completion-arrestation": "Aren't you going to proceed to an arrestation ?",
+            "old-sheriff-completion-arrestation-impossible": "I think I have an idea what you're planning to do. Don't bother. Mighty Hobo is already dead.",
+            "old-sheriff-completion-business-exit": "It's been a pleasure doing business with you. Bye !",
+            "old-sheriff-completion-exit": "I understand. Take care of yourself.",
             "old-sheriff-quest-ask-reward": "I might be interested. What kind of reward can I expect ?",
+            "old-sheriff-vendetta-come-with": "You're not alone. Come with me. We can't save the world, but we can do some good still. Scratchy did not give up... he kept going against all ods until it killed him. And I won't give up either, even if it kills me. What are you going to do ?",
+            "quest-old-sherif-report/complete": "This is evidence enough. You've done a great job, and I won't forget it. Please, take your reward and leave. I need some time alone.",
+            "quest-old-sherif-report/drunken-master": "That's not proof enough that he did it. Itchy regularly gets in arguments with ponies when he's drunk, and he never killed anypony before. Unless you've got solid evidence that he did it, I can't just take your word for it.",
+            "quest-old-sherif-report/entry": "Really ? That's great ! What did you find out ?",
+            "quest-old-sherif-report/mercenaries": "I wouldn't be surprised if one of them did it... and at this point, I'd take any excuse to go at those fuckers. But you're not giving me anything tangible there.",
+            "quest-old-sherif-report/sherif-star": "Dear Celestia... that... that was Scratchy's ! He never used to take it off, not even to sleep ! But... why ? Mighty Hobo never made trouble for anyone, he lives on the outskirts of town, and... and Scratchy Lead had no reason to even get involved with him ! What the hell is going on ?",
             "quest-old-sheriff": "Actually... I guess I could use the help of someone who's not from around here. How do you feel about a murder mystery ? Somepony's been killed not too long ago, in a pretty gruesome way. The victim... he was the previous sheriff. Everpony here knows I used to be close to him, so I guess people are pretty careful about what they say around me. But maybe you'll be able to find out more about what happened. What do you say ? Feel like a detective yet ?",
+            "quest-old-sheriff-arrestation/after-fight": "It's done... he's dead... just like Scratchy. I've repaid my debt to him.<br/>Thank you for backing me up. I won't forget it.",
+            "quest-old-sheriff-arrestation/after-fight-teamup": "Well. I owe you one, and I've got nothing better to do. It's settled, then ! I'll join your team, at least until we pass judgement on everpony who got involved in this matter.<br>Let's get to it.",
+            "quest-old-sheriff-arrestation/after-fight-whats-next": "I don't know. I've got no ties to this village anymore... except for a couple tragic memories. I think I'm gonna get back on the road, see wherever that'll lead me...",
+            "quest-old-sheriff-arrestation/already-dead": "Shit... then I guess it's already over... and I was powerless to do anything...",
+            "quest-old-sheriff-arrestation/entry": "No. No I'm not. I'm not even a real sheriff. I've got no ties to this town. No responsibility towards them. Everything I've been doing, I've been doing for Scratchy, and nopony else. Now he's gone. I'm going to find some closure. Then I'll go back to the wastes.",
+            "quest-old-sheriff-arrestation/greater-plan": "Tsk. Aren't we all ? There's this little thing called free will, and accountability. Mighty Hobo sew the seed of a storm, and it's to late to stop it now. Like it or not, he WILL get what's coming for him.",
+            "quest-old-sheriff-arrestation/vendetta-confirmed": "Jeez... I know you're playing me... but you've got me fired up. You didn't know Scratchy... I don't think he would've so easily rebelled against the Potiok, or followed the Bibin trail all the way to Cristal Den. He was too smart to do something so reckless. But I'm not. Alright. Mighty Hobo can wait. I'll follow you. Whenever you're ready, let's get some revenge on these dictators wannabes.",
+            "quest-old-sheriff-arrestation/vendetta-start": "... I'm just one pony... weak, flesh and blood pony... I'm not going to save the world. I can't. But I can avenge Scratchy. That I can do.",
+            "quest-old-sheriff-arrestation/vengeance-start": "... alright. I could use somepony watching my back. Here's the plan. We're going to his shack. If he's not there, we'll stake out and confront him once he's back.<br/><br/>Let's go.",
             "quest-old-sheriff-asked-reward-accepted": "Sounds fair.",
             "quest-old-sheriff-briefing": "Alright. The victim's name was Scratchy Lead. He used to be the sheriff... back when I was his deputy.<br/><br/><i>As she starts describing the victim, you notice she tries to keep control of her voice as it starts wavering.</i><br/><br/>He was fair, righteous... and the darndest goodest earth pony in this town. Yet some fucker killed him, a few nights ago. His body was found somewhere between this here building and the coal mine. I don't have a single clue what the motive might've been. He wasn't involved in anything shady, that's for sure. He was too honest for any of that. And I would've known for sure. Perhaps he was just at the wrong place at the wrong time...<br/><br/>You may want to ask Stitch Poker for more details. She practiced the autopsy. You can find her at the clinic, right in front of you when you come out the front door of this building.",
             "quest-old-sheriff-briefing-reaction": "Thank you. I'll be on my way.",
@@ -30,7 +66,8 @@
             "quest-old-sheriff-on-negociate-success": "Tough businesspony huh ? I can appreciate that too. Alright, you've got yourself a deal.",
             "quest-old-sheriff-reward-asked": "Straight to the point, I see ! I like that. The reward is {{sheriffQuestReward}}. That is, if you bring me that murderous prick alive.",
             "reject-old-sheriff-quest": "I'm sorry for your loss, but I don't think I'm qualified to help.",
-            "reject-old-sheriff-quest-alt": "Not my kind of police work. I was hoping for less Sherlock Pones and more Daring Do."
+            "reject-old-sheriff-quest-alt": "Not my kind of police work. I was hoping for less Sherlock Pones and more Daring Do.",
+            "report-quest-old-sherif": "I have new information about Scratchy Leads' murder."
         }
     }
 }
