--- a/assets/locales/dialogs/junkville/dog-captive.en.json
+++ b/assets/locales/dialogs/junkville/dog-captive.en.json
@@ -1,11 +1,11 @@
 {
-  "dialogs": {
+    "dialogs": {
         "junkville/dog-captive": {
             "announce-release": "You're all free to go. I've talked to the diamond dog's leader, and he's agreed to let you go.",
             "ask-about-secrecy": "And ? Would you tell ponies about these tunnels ?",
             "ask-situation": "What's going on here ?",
             "breakout": "Alright. We're going to trust you on this... come on everypony, this one's going to lead us out !",
-            "breakout-fail": "Are you kidding ? Have you seen how many dogs are in these caves ? You're gonna get us all killed ! No way !",
+            "breakout-fail": "It's not going to be a cakewalk... but you look like a capable warrior. We'll put our trust in you. Take us out of here !",
             "dogs-slained": "The diamond dogs are all dead. You're free.",
             "entry": "...",
             "junkville-mission": "Yes ! I knew Raggedy Randy would send someone eventually ! That old pal would never let his patrons disappear and do nothing about it ! So, what's the plan ?",
@@ -21,5 +21,5 @@
             "suggest-breakout": "I'm breaking y'all out of here. Follow my lead.",
             "tell-freedom": "I've had a talk with the diamond dog leader. I'm here to tell you that you're free to go."
         }
-  }
+    }
 }
